--- a/tasks/configs/enzyme_commission_number.yaml
+++ b/tasks/configs/enzyme_commission_number.yaml
@@ -19,10 +19,11 @@ Training:
   seq_len: 1024
 
 Model:
-  pretrain_model_name: 'procyon'
+  pretrain_model_name: 'esm2_650m'
   finetune_type: 'adapter'
+  peft_type: 'lora'
   lora_r: 8                  # 低秩矩阵的秩
-  lora_alpha: 32             # LoRA 的 alpha 参数
+  lora_alpha: 16             # LoRA 的 alpha 参数
   lora_dropout: 0.1          # Dropout 防止过拟合
 
 Task:
