--- a/tasks/configs/material_production.yaml
+++ b/tasks/configs/material_production.yaml
@@ -21,14 +21,17 @@ Training:
 Model:
   pretrain_model_name: "esm3_1.4b"
   finetune_type: 'adapter'
+  peft_type: 'lora'
   lora_r: 8                  # 低秩矩阵的秩
-  lora_alpha: 32             # LoRA 的 alpha 参数
+  lora_alpha: 16             # LoRA 的 alpha 参数
   lora_dropout: 0.1          # Dropout 防止过拟合
 
 Task:
   task_name: "material_production"
-  task_type: "classification"
-  num_classes: 19
+  task_type: "binary_classification"
+  num_classes: 1
+  # metric: "valid_acc"
+  # direction: "max"
 
 hydra:
   output_subdir: null
