--- a/tasks/configs/tape_stability.yaml
+++ b/tasks/configs/tape_stability.yaml
@@ -4,9 +4,13 @@ Output:
   offline: ${eval:"int(${oc.env:OFFLINE, '1'})"}
 
 Data:
+  # TAPE_Stability
   train_data_path: "/nfs_beijing/kubeflow-user/zhangyang_2024/workspace/protein_benchmark/datasets/TAPE_Stability/mmseq_outdir/train.csv"
   val_data_path: "/nfs_beijing/kubeflow-user/zhangyang_2024/workspace/protein_benchmark/datasets/TAPE_Stability/mmseq_outdir/val.csv"
   test_data_path: "/nfs_beijing/kubeflow-user/zhangyang_2024/workspace/protein_benchmark/datasets/TAPE_Stability/mmseq_outdir/test.csv"
+  # train_data_path: "/nfs_beijing/kubeflow-user/zhangyang_2024/workspace/protein_benchmark/datasets/saprot_tape_stab/train.csv"
+  # val_data_path: "/nfs_beijing/kubeflow-user/zhangyang_2024/workspace/protein_benchmark/datasets/saprot_tape_stab/valid.csv"
+  # test_data_path: "/nfs_beijing/kubeflow-user/zhangyang_2024/workspace/protein_benchmark/datasets/saprot_tape_stab/test.csv"
 
 Training:
   epoch: 50  # end epoch
@@ -21,14 +25,17 @@ Training:
 Model:
   pretrain_model_name: 'esm_650m'
   finetune_type: 'adapter'
+  peft_type: 'lora'
   lora_r: 8                  # 低秩矩阵的秩
-  lora_alpha: 32             # LoRA 的 alpha 参数
+  lora_alpha: 16             # LoRA 的 alpha 参数
   lora_dropout: 0.1          # Dropout 防止过拟合
 
 Task:
   task_name: "tape_stability"
   task_type: "regression"
   num_classes: 1
+  # metric: "valid_spearman"
+  # direction: "max"
 
 hydra:
   output_subdir: null
