--- a/tasks/configs/deeploc_binary.yaml
+++ b/tasks/configs/deeploc_binary.yaml
@@ -29,6 +29,8 @@ Task:
   task_name: "deep_loc_binary"
   task_type: "binary_classification"
   num_classes: 1
+  # metric: "valid_auroc"
+  # direction: "max"
 
 hydra:
   output_subdir: null
