--- a/tasks/configs/esol.yaml
+++ b/tasks/configs/esol.yaml
@@ -29,6 +29,8 @@ Task:
   task_name: "eSOL"
   task_type: "regression"
   num_classes: 1
+  # metric: "valid_spearman"
+  # direction: "max"
 
 hydra:
   output_subdir: null
