--- a/tasks/configs/yeast_ppi.yaml
+++ b/tasks/configs/yeast_ppi.yaml
@@ -29,6 +29,8 @@ Task:
   task_name: "yeast_ppi"
   task_type: "pair_binary_classification"
   num_classes: 1
+  # metric: "valid_auroc"
+  # direction: "max"
 
 hydra:
   output_subdir: null
